--- a/src/components/index.module.css
+++ b/src/components/index.module.css
@@ -195,8 +195,11 @@
   }
   .parceiro h2 {
     font-size: 26px;
-    margin-top: 115px;
+    margin-top: 112px;
     margin-bottom: 25px;
+  }
+  .background-2{
+    height: 365px;
   }
 }
 @media only screen and (max-width: 383px) {
