--- a/src/components/index.module.css
+++ b/src/components/index.module.css
@@ -69,15 +69,23 @@
   width: 532px;
   font-weight:300;
 }
-
+.icon-Whats{
+  width: 50px;
+  height: 50px;
+}
 .buttonPrincipal{
   padding: 18px;
   font-size: 16px;
   border-radius: 15px;
+  cursor: pointer;
   text-decoration: none;
   border: none;
   background-color:#21c25c;
   color: #d9dadb;
+}
+.buttonPrincipal:hover{
+  background-color: #1a9c4f;
+  transition: background .3s ease;
 }
 .parceiro h2 {
   text-align: center;
